# statki2_0

./: CMakeLists.txt  README.md  main.cpp
engine/: Cell.h  Grid.cpp  GridPoint.cpp  GridPoint.h  Result.h  Ship.cpp  Ship.h
engine/base/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  GridPoint.cpp  GridPoint.h  Result.cpp  Result.h  Ship.cpp  Ship.h
engine/config/: ShipConfig.cpp  ShipConfig.h
simple-cli/: SimpleCLI.cpp  SimpleCLI.h
strategies/: AnalyticalStrategy.cpp  AnalyticalStrategy.h  HumanStrategy.cpp  HumanStrategy.h  RandomStrategy.cpp  RandomStrategy.h  Strategy.cpp  Strategy.h
util/: len.cpp  len.h  random.cpp  random.h  str.cpp  str.h
util/interface/: IMeasurable.cpp  IMeasurable.h  IStringable.cpp  IStringable.h
